add readme and adjust swagger docs
